# project-orcus

./: .gitignore  CMakeLists.txt  README.md
cmake/: FindGLFW.cmake
doc/: project-magnolia.txt
src/: Application.cpp  Application.h  Common.h  Context.cpp  Context.h  magnolia.cpp
